<?xml version="1.0"?>
<package format="3">
  <name>lidar_align</name>
  <version>0.0.0</version>
  <description>Aligns 3D lidars to a 6-dof pose source</description>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libnlopt-dev</depend>

  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
